_moppris/css/main.css
/* font-family: 'Josefin Sans', sans-serif; */
/* font-family: 'Arimo', sans-serif; */

/* Overwite */
.content
{
    max-width: 100%;
}

#menu .pure-menu-heading
{
    background: #d7003a;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 130%;
}

.pure-menu-link
{
    font-family: 'Josefin Sans', sans-serif;
    font-size: 130%;
}

#layout
{
    height: auto;
    height: 100%;
    min-height: 100%;
    padding-bottom: 1em;
}

.header
{
    padding: 0.5em 2em 0;
}

html
{
    height: 100%;
}

body
{
    font-family: 'Arimo', 'Noto Sans JP', monospace;

    position: relative;

    height: auto;
    min-height: 100%;
}

.circle_img
{
    border-radius:         50%;
    -webkit-border-radius: 50%;
    -moz-border-radius:    50%;
}

#side_icon
{
    display: block;
    margin: auto;
}

.menu_icon
{
    text-align:center;
    width: 1em;
    padding-right: 0.5em;
}

.icon_links_container
{
    display: flex;
    justify-content: space-between;
    padding-right: 1em;
}

#icons_field
{
    border-bottom: 1px solid #eee;
}

.icon_holder
{
    padding-top: 10px;
}

.mopp_icon,
.reflect canvas,
.reflected
{
    width: 100%;
}

footer
{
    position: absolute;
    bottom:0;

    height: 3em;
    width: 100%;
    background: #d7003a;
    color: #191818;
}


@media (min-width: 48em)
{
    #footer_content
    {
        margin-left: 160px;
    }
}

@media (max-width: 48em)
{
    #footer_content
    {
        margin-left: 5px;
    }
}

